# networks-and-information-theory

./: .gitignore  mostrar_fuentes.py  pyproject.toml
taller1/: experimento.sh  mostrar_fuentes.py  pyproject.toml
taller1/analisis/: Untitled.ipynb
taller1/informe/: 0-introduccion.tex
taller1/logs/: flinari.txt  jcperez.txt  jjunqueras.txt
taller3/: analisis.py  flinari-exactasuba.txt  portscan.py  pyproject.toml  unrn  well-known-ports.csv
taller3/experimentacion/: flinari-fceyn.csv  jcperez-unc.csv  jromera-uncaus.csv
taller3/informe/: 0-introduccion.tex  1-experimentos.tex  2-resultados.tex  3-conclusiones.tex  informe.tex
taller4/: correr-experimentos.sh  dns.py  pyproject.toml
taller4/informe/: 0-introduccion.tex  1-experimentos.tex  2-resultados.tex  3-conclusiones.tex  informe.tex
taller4/logs/: flinari-wwwdcubaar-a.txt  flinari-wwwdcubaar-b.txt  flinari-wwwdcubaar-c.txt  flinari-wwwtu-berlinde-a.txt  flinari-wwwwasedajp-a.txt  jcperez-undaveduar-a.txt  jcperez-wwwubaar-a.txt  jcperez-wwwubaar-b.txt  jcperez-wwwubaar-c.txt  jcperez-wwwunabeduar-a.txt  jcperez-wwwunabeduar-b.txt  jcperez-wwwunajeduar-a.txt  jcperez-wwwunajeduar-b.txt  jcperez-wwwunajeduar-c.txt  jcperez-wwwuncaeduar-a.txt  jcperez-wwwunceduar-a.txt  jcperez-wwwuncuyoeduar-a.txt  jcperez-wwwuncuyoeduar-b.txt  jcperez-wwwuncuyoeduar-c.txt  jcperez-wwwundeceduar-b.txt  jcperez-wwwundefeduar-c.txt  jcperez-wwwunereduar-a.txt  jcperez-wwwunereduar-b.txt  jcperez-wwwunereduar-c.txt  jcperez-wwwunfeduar-a.txt  jcperez-wwwunfeduar-b.txt  jcperez-wwwunfeduar-c.txt  jcperez-wwwungseduar-a.txt  (+26 more)
(+69 files in other folders)
