[tool.poetry]
name = "taller3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scapy = "^2.4"
pandas = "^1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.15"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
