[tool.poetry]
name = "taller4"
version = "0.1.0"
description = ""
authors = ["Joaquín P. Centeno <jpcenteno@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
scapy = "^2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
